[project]
name = "odoo-addons-oca-hr-expense"
version = "17.0.20241001.0"
dependencies = [
    "odoo-addon-hr_expense_cancel>=17.0dev,<17.1dev",
    "odoo-addon-hr_expense_employee_analytic_default>=17.0dev,<17.1dev",
    "odoo-addon-hr_expense_invoice>=17.0dev,<17.1dev",
    "odoo-addon-hr_expense_payment>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
